--- a/Modules/LoRA/2024.05.05_FourierFT.md
+++ b/Modules/LoRA/2024.05.05_FourierFT.md
@@ -53,16 +53,32 @@
 
 ## 1.Introduction: 引言
 
-> Large foundation models~(LFMs) have demonstrated exceptional performance on tasks of multiple domains, including natural language processing (NLP)~\cite{roberta,deberta,gpt2,gpt3,licommunity} and computer vision (CV)~\cite{cv_2,cv_1,cv_3,sd}. Owing to their impressive capabilities, fine-tuning LFMs for a wide range of downstream tasks has become prevalent~\cite{gpt35,alpaca,ft_3}. Under the full fine-tuning paradigm, the new model adapted to each customized task typically contains as many parameters as the original model~\cite{ft_3,ft_4,graphwiz,promptmsp}. As models grow larger and customization needs expand, the demand for storing fine-tuned checkpoints rises, resulting in both costly storage and memory consumption.
+> Large foundation models~(LFMs) have demonstrated exceptional performance on tasks of multiple domains, including natural language processing (NLP)~\cite{roberta,deberta,gpt2,gpt3,licommunity} and computer vision (CV)~\cite{cv_2,cv_1,cv_3,sd}. 
+> Owing to their impressive capabilities, fine-tuning LFMs for a wide range of downstream tasks has become prevalent~\cite{gpt35,alpaca,ft_3}. 
+> Under the full fine-tuning paradigm, the new model adapted to each customized task typically contains as many parameters as the original model~\cite{ft_3,ft_4,graphwiz,promptmsp}. 
+> As models grow larger and customization needs expand, the demand for storing fine-tuned checkpoints rises, resulting in both costly storage and memory consumption.
 
 > As a popular way to address this issue, LoRA \cite{lora} represents the weight change with two low-rank matrices $A$ and $B$, i.e., $W_0+\Delta W = W_0+BA$.
-> Despite LoRA's superb performance, its large size of trainable parameters still brings high IT infrastructure consumption, which affects both ends of public communities and individual users. For the former, an intuitive example is that a LoRA adapter~(fine-tuned weights) for a specific style of the stable diffusion model~\cite{sd} requires about 40MB of memory. This necessitates the LFM communities (e.g., Civitai~\cite{civitai}) to bear high storage and bandwidth costs to cater to a large user base. For the latter, fewer parameters mean direct RAM savings when loading fine-tuned weights in mobile APPs, enabling sufficient customization for individual users~\cite{pets1}. To this end, we naturally ask the question: \textit{How can we aggressively compress trainable parameters even further for fine-tuning LFMs?}
+> Despite LoRA's superb performance, its large size of trainable parameters still brings high IT infrastructure consumption, which affects both ends of public communities and individual users. 
+> For the former, an intuitive example is that a LoRA adapter~(fine-tuned weights) for a specific style of the stable diffusion model~\cite{sd} requires about 40MB of memory. 
+> This necessitates the LFM communities (e.g., Civitai~\cite{civitai}) to bear high storage and bandwidth costs to cater to a large user base. 
+> For the latter, fewer parameters mean direct RAM savings when loading fine-tuned weights in mobile APPs, enabling sufficient customization for individual users~\cite{pets1}. 
+> To this end, we naturally ask the question: \textit{How can we aggressively compress trainable parameters even further for fine-tuning LFMs?}
 
-> Previous works have demonstrated the powerful expressiveness of Fourier basis in data compression, where extremely sparse spectral information can be used to recover high-fidelity data~(e.g., 1D signal vectors \cite{fft_signal_1,fft_signal_2,fft_signal_3} and 2D image matrices \cite{fft_cv_1,fft_cv_2,fft_cv_3}). More importantly, when dealing with more general (non-image) matrices that lack strong spatial semantics and are not frequency-sparse, Fourier transform can still handle recovery effectively \cite{evi_2,evi_3}. Motivated by this, we investigate the potential for updating the weight change $\Delta W$ with its sparse spectral coefficients for fine-tuning LFMs. 
+> Previous works have demonstrated the powerful expressiveness of Fourier basis in data compression, where extremely sparse spectral information can be used to recover high-fidelity data~(e.g., 1D signal vectors \cite{fft_signal_1,fft_signal_2,fft_signal_3} and 2D image matrices \cite{fft_cv_1,fft_cv_2,fft_cv_3}). 
+> More importantly, when dealing with more general (non-image) matrices that lack strong spatial semantics and are not frequency-sparse, Fourier transform can still handle recovery effectively \cite{evi_2,evi_3}. 
+> Motivated by this, we investigate the potential for updating the weight change $\Delta W$ with its sparse spectral coefficients for fine-tuning LFMs. 
 
-> In this paper, we aim to aggressively reduce the number of trainable parameters for fine-tuning LFMs. To this end, we propose \textit{FourierFT} (\underline{Fourier} Transform for \underline{F}ine-\underline{T}uning), which treats the weight change $\Delta W$ as a matrix in the spatial domain, and learns its sparse spectral coefficients. Specifically, we first randomly select $n$ spectral entries that are shared across all layers. For each layer, FourierFT learns $n$ spectral coefficients located at these $n$ selected entries and then directly applies inverse discrete Fourier transform to compute the updated $\Delta W$. Therefore, fine-tuning a pre-trained model with $L_{t}$ layers only requires storing $2n$ entry parameters and $nL_{t}$ coefficient parameters for FourierFT. 
+> In this paper, we aim to aggressively reduce the number of trainable parameters for fine-tuning LFMs. 
+> To this end, we propose \textit{FourierFT} (\underline{Fourier} Transform for \underline{F}ine-\underline{T}uning), which treats the weight change $\Delta W$ as a matrix in the spatial domain, and learns its sparse spectral coefficients. 
+> Specifically, we first randomly select $n$ spectral entries that are shared across all layers. 
+> For each layer, FourierFT learns $n$ spectral coefficients located at these $n$ selected entries and then directly applies inverse discrete Fourier transform to compute the updated $\Delta W$. 
+> Therefore, fine-tuning a pre-trained model with $L_{t}$ layers only requires storing $2n$ entry parameters and $nL_{t}$ coefficient parameters for FourierFT. 
 
-> Empirically, we compare our method with state-of-the-art LoRA variants and other parameter-efficient fine-tuning methods on various tasks including (1) natural language understanding~(on the GLUE benchmark), (2) natural language generation~(on the E2E benchmark), (3) instruction tuning (with LLaMA-family models), and (4) image classification~(with vision transformers). FourierFT can always achieve comparable or even better performance than LoRA, with about 6.0\%, 9.4\%, 0.2\% and 9.2\% of LoRA's trainable parameters for these 4 tasks, respectively. For example in Figure \ref{fig:motivation}, on the instruction tuning task, our FourierFT method outperforms LoRA with only 64K trainable parameters. Moreover, it achieves a comparable score to Full Fine-tuning with only 128K parameters.
+> Empirically, we compare our method with state-of-the-art LoRA variants and other parameter-efficient fine-tuning methods on various tasks including (1) natural language understanding~(on the GLUE benchmark), (2) natural language generation~(on the E2E benchmark), (3) instruction tuning (with LLaMA-family models), and (4) image classification~(with vision transformers). 
+> FourierFT can always achieve comparable or even better performance than LoRA, with about 6.0\%, 9.4\%, 0.2\% and 9.2\% of LoRA's trainable parameters for these 4 tasks, respectively. 
+> For example in Figure \ref{fig:motivation}, on the instruction tuning task, our FourierFT method outperforms LoRA with only 64K trainable parameters. 
+> Moreover, it achieves a comparable score to Full Fine-tuning with only 128K parameters.
 
 ## 2.Related Works: 相关工作
 
