--- a/Modules/LoRA/2024.05.05_FourierFT.md
+++ b/Modules/LoRA/2024.05.05_FourierFT.md
@@ -82,6 +82,33 @@
 
 ## 2.Related Works: 相关工作
 
+### Parameter-Efficient Fine-Tuning.
+
+> With the rapid expansion of large foundation models (LFM), it has become challenging and important to efficiently adapt them for specific tasks. 
+> To this end, numerous methods for parameter-efficient fine-tuning (PEFT) are proposed, demonstrating impressive capabilities in both efficiency and accuracy. 
+> Existing PEFT methods are broadly partitioned into two categories: non-weight-based and weight-based methods.
+
+> **Non-weight-based methods** do not optimize pre-trained LFMs at the weight level. 
+> Instead, they achieve fine-tunings by introducing additional modules or optimizing prompts and prefixes. 
+> Adapter tuning~\cite{adapter1,adapter2,ada_p,ada_h,ada_d,ada_l} aims to introduce light-weighted neural modules, called adapters, between pre-trained layers of the base model. 
+> These methods keep the pre-trained weights frozen and efficiently fine-tune the adapters for customized tasks. 
+> Prompt tuning~\cite{gpt3,prompt1,prompt2,prompt3} and prefix tuning~\cite{prefix1} insert additional prompts or prefix tokens to the layers of the base model.
+
+> **Weight-based methods**, represented by LoRA~\cite{lora}, introduce and then update weight changes that can be merged with the original weights to avoid inference latency. 
+> LoRA’s innovation lies in the multiplication of low-rank matrices to approximate weight changes. 
+> Building upon this, AdaLoRA~\cite{adalora} extends the LoRA method by distributing the parameter budget across weight matrices with importance scores. 
+> Additionally, Q-LoRA~\cite{qlora} proposes to back-propagate gradients upon LoRA through a quantized pre-trained model with 4-bit NormalFloat.
+
+> Here, we focus on **weight-based methods** and achieve huge parameter reduction with the powerful expressiveness of Fourier basis, rather than following the low-rank structure.
+
+### Sparse Fourier Transform in Deep Learning. 
+
+> Sparse Fourier transform~(SFT) has flourished in various fields of deep learning~(DL). 
+> The SFT technique mainly involves using sparse spectral coefficients of significant \cite{data3,data1,data2,bwgnn} or even random~\cite{random1,random2,random3} spectral entries, for representation learning. 
+> One important application of this technique is matrix recovery. \citet{recover1} designs a gradient-based compressed sensing method to recover images with their sparse Fourier information. \citet{recover2} proposes an efficient phase retrieval method that improves data recovery using sparse Fourier coefficients. 
+> Importantly, previous works~\cite{evi_2,evi_3,megae} show that even when the original data is not frequency-sparse, SFT can effectively recover the data with extremely few parameters. 
+> Although previous works lack studies on the recovery for the weight matrices of DL models with SFT, the aforementioned methods provide potential support for this work.
+
 ## 3.Methodology: 方法
 
 ## 4.Experiments: 实验
