--- a/Models/TTS3_Vocoder/2024.08.14_PeriodWave.md
+++ b/Models/TTS3_Vocoder/2024.08.14_PeriodWave.md
@@ -149,17 +149,22 @@
 
 ## 3.Methodology: 方法
 
-> The flow matching model \citep{lipman2022flow,tong2023conditional} has emerged as an effective strategy for the swift and simulation-free training of continuous normalizing flows (CNFs), producing optimal transport (OT) trajectories that are readily incorporable. We are interested in the use of flow matching models for waveform generation to understand their capability to manage complex transformations across waveform distributions. Hence, we begin with the essential notation to analyze flow matching with optimal transport, followed by a detailed introduction to the proposed method.
+> The flow matching model \citep{lipman2022flow,tong2023conditional} has emerged as an effective strategy for the swift and simulation-free training of continuous normalizing flows (CNFs), producing optimal transport (OT) trajectories that are readily incorporable. 
+> We are interested in the use of flow matching models for waveform generation to understand their capability to manage complex transformations across waveform distributions. 
+> Hence, we begin with the essential notation to analyze flow matching with optimal transport, followed by a detailed introduction to the proposed method.
 
 ### 3.1.Preliminary: Flow Matching with Optimal Transport Path
 
-> In the data space $\mathbb{R}^d$, consider an observation $x \in \mathbb{R}^d$ sampled from an unknown distribution $q(x)$. CNFs transform a simple prior $p_0$ into a target distribution $p_1 \approx q$ using a time-dependent vector field $v_t$. The flow $\phi_t$ is defined by the ordinary differential equation: 
+> In the data space $\mathbb{R}^d$, consider an observation $x \in \mathbb{R}^d$ sampled from an unknown distribution $q(x)$. 
+> CNFs transform a simple prior $p_0$ into a target distribution $p_1 \approx q$ using a time-dependent vector field $v_t$. 
+> The flow $\phi_t$ is defined by the ordinary differential equation: 
 
 $$
 \frac{d}{dt} \phi_t(x) = v_t(\phi_t(x); \theta), \quad \phi_0(x) = x, \quad x \sim p_0 ,
 $$
 
-> The flow matching objective, as introduced by \citep{lipman2022flow}, aims to match the vector field $v_t(x)$ to an ideal vector field $u_t(x)$ that would generate the desired probability path $p_t$. The flow matching training objective involves minimizing the loss function $L_{FM}(\theta)$, which is defined by regressing the model's vector field $v_{\theta}(t, x)$ to a target vector field $u_t(x)$ as follows:
+> The flow matching objective, as introduced by \citep{lipman2022flow}, aims to match the vector field $v_t(x)$ to an ideal vector field $u_t(x)$ that would generate the desired probability path $p_t$. 
+> The flow matching training objective involves minimizing the loss function $L_{FM}(\theta)$, which is defined by regressing the model's vector field $v_{\theta}(t, x)$ to a target vector field $u_t(x)$ as follows:
 
 $$
 \mathcal{L}_{FM}(\theta) = \mathbb{E}_{t\sim[0,1],x \sim p_t(x)}\left|\left|v_{\theta}(t, x) -  u_t(x)\right|\right|_2^2 .   
@@ -177,37 +182,83 @@ $$
 L_{\text{OT-CFM}}(\theta) = \mathbb{E}_{t, q(x_1), p_0(x_0)} \| u_t^{\text{OT}}(\phi_t^{\text{OT}}(x_0) \mid x_1) - v_t(\phi_t^{\text{OT}}(x_0) \mid \mu; \theta) \|^2,
 $$
 
-> where $\phi_t^{\text{OT}}(x_0) = (1 - (1 - \sigma_{\text{min}})t)x_0 + tx_1$ and $u_t^{\text{OT}}(\phi_t^{\text{OT}}(x_0) \mid x_1) = x_1 - (1 - \sigma_{\text{min}})x_0$. This approach efficiently manages data transformation and enhances training speed and efficiency by integrating optimal transport paths. The detailed formulas are described in Appendix \ref{section:preliminary}.
+> where $\phi_t^{\text{OT}}(x_0) = (1 - (1 - \sigma_{\text{min}})t)x_0 + tx_1$ and $u_t^{\text{OT}}(\phi_t^{\text{OT}}(x_0) \mid x_1) = x_1 - (1 - \sigma_{\text{min}})x_0$. 
+> This approach efficiently manages data transformation and enhances training speed and efficiency by integrating optimal transport paths. 
+> The detailed formulas are described in Appendix \ref{section:preliminary}.
 
 ### 3.2.Period-aware Flow Matching Estimator
 
-> In this work, we propose a period-aware flow matching estimator, which can reflect the different periodic features when estimating the vector field for high-quality waveform generation as illustrated in Figure \ref{fig:ode}. First, we utilize a time-conditional UNet-based structure for time-specific vector field estimation. Unlike previous UNet-based decoders, PeriodWave utilizes a mixture of reshaped input signals with different periods as illustrated in Figure \ref{fig:framework}. Similar to \citep{kong2020hifi}, we reshape the 1D data sampled from $p_t(x)$ of length $T$ into 2D data of height $T/p$ and width $p$. We will refer to this process as \textit{Periodify}. Then, we condition the period embedding to indicate the specific period of each reshaped sample for period-aware feature extraction in a single estimator. We utilize different periods of [1,2,3,5,7] that avoid overlaps to capture different periodic features from the input signal. We utilize 2D convolution of down/upsampling layer and ResNet Blocks with a kernel size of 3 and dilation of 1, 2 for each UNet block. Specifically, we downsample each signal by [4,4,4] so the representation of the middle block has height $T/(p\times64)$ and width $p$. After extracting the representation for each period, we reshape the 2D representation into the original shape of the 1D signal for each period path. We sum all representations from all period paths. The final block estimates the vector fields from a mixture of period representations. 
+> In this work, we propose a period-aware flow matching estimator, which can reflect the different periodic features when estimating the vector field for high-quality waveform generation as illustrated in Figure \ref{fig:ode}. 
+> First, we utilize a time-conditional UNet-based structure for time-specific vector field estimation. 
+> Unlike previous UNet-based decoders, PeriodWave utilizes a mixture of reshaped input signals with different periods as illustrated in Figure \ref{fig:framework}. 
+> Similar to \citep{kong2020hifi}, we reshape the 1D data sampled from $p_t(x)$ of length $T$ into 2D data of height $T/p$ and width $p$. 
+> We will refer to this process as \textit{Periodify}. 
+> Then, we condition the period embedding to indicate the specific period of each reshaped sample for period-aware feature extraction in a single estimator. 
+> We utilize different periods of [1,2,3,5,7] that avoid overlaps to capture different periodic features from the input signal. 
+> We utilize 2D convolution of down/upsampling layer and ResNet Blocks with a kernel size of 3 and dilation of 1, 2 for each UNet block. 
+> Specifically, we downsample each signal by [4,4,4] so the representation of the middle block has height $T/(p\times64)$ and width $p$. 
+> After extracting the representation for each period, we reshape the 2D representation into the original shape of the 1D signal for each period path. 
+> We sum all representations from all period paths. 
+> The final block estimates the vector fields from a mixture of period representations. 
 
-> For Mel-spectrogram conditional generation, we only add the conditional representation extracted from Mel-spectrogram to the middle layer representation of UNet for each period path. We utilize ConvNeXt V2 based Mel encoder to extract the conditional information for efficient time-frequency modeling. Previously, Vocos \citep{siuzdak2024vocos} also demonstrated that ConvNeXt-based time-frequency modeling shows effectiveness on the low resolution features. In this works, we utilize the improved ConvNeXt V2 \citep{woo2023convnext} blocks for Mel encoder, and the output of this block is fed to the period-aware flow matching estimator. Because we utilize a hop size of 256, the Mel-spectrogram has a length of $T/256$. To align the conditional representation, we upsample it by 4$\times$ and downsample it by the different strides as periods of [1,2,3,5,7] to get a shape of $T/(p\times64)$. 
+> For Mel-spectrogram conditional generation, we only add the conditional representation extracted from Mel-spectrogram to the middle layer representation of UNet for each period path. 
+> We utilize ConvNeXt V2 based Mel encoder to extract the conditional information for efficient time-frequency modeling. 
+> Previously, Vocos \citep{siuzdak2024vocos} also demonstrated that ConvNeXt-based time-frequency modeling shows effectiveness on the low resolution features. 
+> In this works, we utilize the improved ConvNeXt V2 \citep{woo2023convnext} blocks for Mel encoder, and the output of this block is fed to the period-aware flow matching estimator. 
+> Because we utilize a hop size of 256, the Mel-spectrogram has a length of $T/256$. 
+> To align the conditional representation, we upsample it by 4$\times$ and downsample it by the different strides as periods of [1,2,3,5,7] to get a shape of $T/(p\times64)$. 
 
 > To boost the inference speed, we introduce two methods: 1) period-wise batch inference that can feed-forward parallel for multiple periods by a period-conditional universal estimator; 2) time-shared conditional representation extracted from Mel-spectrogram, which is utilized for every step.
 
 ### 3.3.Flow Matching for Waveform Generation
 
-> To the best of our knowledge, this is the first work to utilize flow matching for waveform generation. In this subsection, we describe the problems we encountered and how to reduce these issues. First, we found that the it is crucial to set the proper noise scale for $x_0$. In general, waveform signal is ranged with -1 to 1, so standard normal distribution $\mathcal{N}(0, 1)$ would be large for optimal path. This results in high-frequency information distortion, causing the generated sample to contain only low-frequency information. To reduce this issue, we scale down the $x_0$ by multiplying a small value $\alpha$. Although we successfully generate the waveform signal by small $\alpha$, we observed that the generated sample sometimes contains a small white noise. We simply solve it by additionally multiplying temperature $\tau$ on the $x_0$ as analyzed in Table \ref{Table:Temperature}. Furthermore, we adopt data-dependent prior \citep{lee2022priorgrad} to flow matching-based generative models. Specifically, we utilize an energy-based prior which can be simply extracted by averaging the Mel-spectrogram along the frequency axis. We set $\mathcal N(0,\Sigma)$ for the distribution of $p_0(x)$, and multiply $\Sigma$ by a small value of 0.5. All of them significantly improve the sample quality and boost the training speed.
+> To the best of our knowledge, this is the first work to utilize flow matching for waveform generation. 
+> In this subsection, we describe the problems we encountered and how to reduce these issues. 
+> First, we found that the it is crucial to set the proper noise scale for $x_0$. 
+> In general, waveform signal is ranged with -1 to 1, so standard normal distribution $\mathcal{N}(0, 1)$ would be large for optimal path. 
+> This results in high-frequency information distortion, causing the generated sample to contain only low-frequency information. 
+> To reduce this issue, we scale down the $x_0$ by multiplying a small value $\alpha$. 
+> Although we successfully generate the waveform signal by small $\alpha$, we observed that the generated sample sometimes contains a small white noise. 
+> We simply solve it by additionally multiplying temperature $\tau$ on the $x_0$ as analyzed in Table \ref{Table:Temperature}. 
+> Furthermore, we adopt data-dependent prior \citep{lee2022priorgrad} to flow matching-based generative models. 
+> Specifically, we utilize an energy-based prior which can be simply extracted by averaging the Mel-spectrogram along the frequency axis. 
+> We set $\mathcal N(0,\Sigma)$ for the distribution of $p_0(x)$, and multiply $\Sigma$ by a small value of 0.5. 
+> All of them significantly improve the sample quality and boost the training speed.
 
 ### 3.4.High-frequency Information Modeling for Flow Matching
 
-> Similar to the findings demonstrated by \citep{roman2023from}, we also observed that flow matching-based waveform generation models could not provide the high-frequency information well. To address this limitation, we adopt three approaches including multi-band modeling and FreeU \citep{si2023freeu}
+> Similar to the findings demonstrated by \citep{roman2023from}, we also observed that flow matching-based waveform generation models could not provide the high-frequency information well. 
+> To address this limitation, we adopt three approaches including multi-band modeling and FreeU \citep{si2023freeu}
 
 #### Multi-band Flow Matching with Discrete Wavelet Transform
 
-> Previously, MBD \citep{roman2023from} demonstrated that diffusion-based models are vulnerable to high-frequency noise so they introduce the multi-band diffusion models by disentangling the frequency bands and introducing specialized denoisers for each band. Additionally, they proposed frequency equalizer (EQ) processor to reduce the white noise by regularizing the noise energy scale for each band.\footnote{We entirely acknowledged \citep{roman2023from} proposed a novel pre-processing method and combined it with diffusion models well. However, we do not use any pre-processing methods for a fair comparison. We introduce a novel architecture and method for high-fidelity waveform generation without any pre-processing.}. Unlike MBD, we introduce a discrete wavelet Transform based multi-band modeling method which can disentangle the signal and reproduce the original signal without losing information\footnote{We observed that using band splitting of MBD without EQ processor results in white noise on the generated sample in our preliminary study so we introduce discrete wavelet Transform based multi-band modeling.}. PeriodWave-MB consists of multiple vector field estimators for each band [0-3, 3-6, 6-9, 9-12 kHz]. Additionally, we first generate a lower band, and then concatenate the generated lower bands to the $x_0$ to generate higher bands. We found that this significantly improve the quality even with small sampling steps. During training, we utilize a ground-truth discrete wavelet Transform components for a conditional information. Additionally, we also utilize a band-wise data-dependent prior by averaging Mel-spectrogram according to the frequency axis including overlapped frequency bands [0-61, 60-81, 80-93, 91-100 bins]. Moreover, we downsample each signal by [1,4,4] by replacing the first down/up-sampling with DWT/iDWT, and this also significantly reduce the computational cost by reducing time resolution. 
+> Previously, MBD \citep{roman2023from} demonstrated that diffusion-based models are vulnerable to high-frequency noise so they introduce the multi-band diffusion models by disentangling the frequency bands and introducing specialized denoisers for each band. 
+> Additionally, they proposed frequency equalizer (EQ) processor to reduce the white noise by regularizing the noise energy scale for each band.\footnote{We entirely acknowledged \citep{roman2023from} proposed a novel pre-processing method and combined it with diffusion models well. 
+> However, we do not use any pre-processing methods for a fair comparison. 
+> We introduce a novel architecture and method for high-fidelity waveform generation without any pre-processing.}. 
+> Unlike MBD, we introduce a discrete wavelet Transform based multi-band modeling method which can disentangle the signal and reproduce the original signal without losing information\footnote{We observed that using band splitting of MBD without EQ processor results in white noise on the generated sample in our preliminary study so we introduce discrete wavelet Transform based multi-band modeling.}. 
+> PeriodWave-MB consists of multiple vector field estimators for each band [0-3, 3-6, 6-9, 9-12 kHz]. 
+> Additionally, we first generate a lower band, and then concatenate the generated lower bands to the $x_0$ to generate higher bands. 
+> We found that this significantly improve the quality even with small sampling steps. 
+> During training, we utilize a ground-truth discrete wavelet Transform components for a conditional information. 
+> Additionally, we also utilize a band-wise data-dependent prior by averaging Mel-spectrogram according to the frequency axis including overlapped frequency bands [0-61, 60-81, 80-93, 91-100 bins]. 
+> Moreover, we downsample each signal by [1,4,4] by replacing the first down/up-sampling with DWT/iDWT, and this also significantly reduce the computational cost by reducing time resolution. 
 
 #### Flow Matching with FreeU
 
-> FreeU \citep{si2023freeu} demonstrated that the features from the skip connection contain high-frequency information in UNet-based diffusion models, and this could ignore the backbone semantics during image generation. We revisited this issue in high-resolution waveform generation task. We also found that the skip features of our model contain a large ratio of high-frequency information. Additionally, this also provided the noisy high-frequency information to the UBlock at the initial sampling steps. Hence, the accumulated high-frequency noise prevents modeling the high-frequency information of waveform. To reduce this issue, we adopt FreeU by scaling down the skip features $z_{skip}$ and scaling up the backbone features $x$ as follows: 
+> FreeU \citep{si2023freeu} demonstrated that the features from the skip connection contain high-frequency information in UNet-based diffusion models, and this could ignore the backbone semantics during image generation. 
+> We revisited this issue in high-resolution waveform generation task. 
+> We also found that the skip features of our model contain a large ratio of high-frequency information. 
+> Additionally, this also provided the noisy high-frequency information to the UBlock at the initial sampling steps. 
+> Hence, the accumulated high-frequency noise prevents modeling the high-frequency information of waveform. 
+> To reduce this issue, we adopt FreeU by scaling down the skip features $z_{skip}$ and scaling up the backbone features $x$ as follows: 
 
 $$
 x = \alpha \cdot z_{skip} + \beta \cdot x
 $$
 
-> where we found the optimal hyper-parameters through grid search: $\alpha=0.9$ and $\beta=1.1$ at the Table \ref{Table:FreeU}, and this significantly improve the high-frequency modeling performance in terms of spectral distances. We also found that scaling up the backbone features could improve the perceptual quality by reducing the noisy sound which is included in ground-truth Mel-spectrogram.   
+> where we found the optimal hyper-parameters through grid search: $\alpha=0.9$ and $\beta=1.1$ at the Table \ref{Table:FreeU}, and this significantly improve the high-frequency modeling performance in terms of spectral distances. 
+> We also found that scaling up the backbone features could improve the perceptual quality by reducing the noisy sound which is included in ground-truth Mel-spectrogram.   
 
 ## 4.Experiments: 实验
 
