--- a/Models/TTS3_Vocoder/2024.08.14_PeriodWave.md
+++ b/Models/TTS3_Vocoder/2024.08.14_PeriodWave.md
@@ -262,6 +262,30 @@ $$
 
 ## 4.Experiments: 实验
 
+### Dataset 
+
+> We train the models using LJSpeech \citep{ljspeech17} and LibriTTS \citep{zen19_interspeech} datasets. 
+> LJSpeech is a high-quality single-speaker dataset with a sampling rate of 22,050 Hz. 
+> LibriTTS is a multi-speaker dataset with a sampling rate of 24,000 Hz. 
+> Following \citep{lee2023bigvgan}, we adopt the same configuration for Mel-spectrogram transformation. 
+> For the LJSpeech, we use the Mel-spectrogram of 80 bins. 
+> For the LibriTTS, we utilize the Mel-spectrogram of 100 bins. 
+
+### Training 
+
+> For reproducibility, we will release all source code, checkpoints, and generated samples at \url{https://periodwave.github.io/demo/}. 
+> For the LibriTTS dataset, we train PeriodWave using the AdamW optimizer with a learning rate of 5$\times$10$^{-4}$, batch size of 128 for 1M steps on four NVIDIA A100 GPUs. 
+> Each band of PeriodWave-MB is trained using the AdamW optimizer with a learning rate of 2$\times$10$^{-4}$, batch size of 64 for 1M steps on two NVIDIA A100 GPUs.\footnote{Due to the limited resources, we only used two GPUs for each band.} It only takes three days to train the model while GAN-based models take over three weeks. 
+> We do not apply any learning rate schedule. 
+> For the ablation study, we train the model with a batch size of 128 for 0.5M steps on four NVIDIA A100 GPUs. 
+> For the LJSpeech dataset, we only train the multi-band model for 0.5M steps. 
+
+### Sampling 
+
+> For the ODE sampling, we utilize Midpoint methods with sampling steps of 16\footnote{The results in Appendix \ref{appendix:ode} show that increasing sampling steps improve the performance consistently.}. 
+> Additionally, we compared the ODE methods including Euler, Midpoint, and RK4 methods according to different sampling steps in Appendix \ref{appendix:ode}. 
+> The experimental details are described in Appendix \ref{appendix:experiment} and \ref{appendix:metrics}.
+
 ## 5.Results: 结果
 
 ## 6.Conclusions: 结论
@@ -275,6 +299,8 @@ $$
 > On the other hand, we introduced a new flow matching based approach using a single loss function, which offers a notable advantage. 
 > Furthermore, we see that the pre-trained flow matching generator could be utilized as a teacher model for distillation or fine-tuning. 
 > We hope that our approach will facilitate the study of waveform generation by reducing training time, so we will release all source code and checkpoints. 
+
+---
 
 ### Broader Impact and Limitation
 
